deployment/openshift/apps/openshift/ibmi-agent-infra/api/api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: agent-os-api
spec:
  to:
    kind: Service
    name: agent-os-api
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
